@@ -47,7 +47,7 @@ copyright = u'2009, Michael M. Hoffman'
 # The short X.Y version.
 version = '0.1'
 # The full version, including alpha/beta/rc tags.
-release = '0.1.9'
+release = '0.1.11'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
