@@ -42,8 +42,8 @@ map_parent
 
 #if CARD_SUPERVISIONLABEL != -1
 4 supervisionLabel_seg_alwaysTrue
-1
-CARD_SUPERVISIONLABEL CARD_SEG
+2
+CARD_SUPERVISIONLABEL CARD_SEG CARD_BOOLEAN
 map_supervisionLabel_seg_alwaysTrue
 #endif
 
