@@ -1,6 +1,10 @@
 0.1.12:
 
-
+* segway: LEN_SEG_EXPECTED becomes 100000
+* segway: fixed --semisupervised bugs
+* BED parsing now handles empty lines by ignoring them instead of
+  generating an error
+* docs changes
 
 0.1.11:
 
